add default sorting and checkmarks to dropdown menus

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3051,7 +3051,7 @@
           "FARCASTER": "Farcaster"
         },
         "sort": {
-          "RECOMMENDED": "Sort",
+          "RECOMMENDED": "Default",
           "VOLUME": "Volume",
           "MARKET_CAP": "Market Cap",
           "TOP_GAINERS": "Top Gainers",
