fix time filters

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3063,7 +3063,7 @@
           "H24": "24 Hours",
           "H24_ABBREVIATED": "24h",
           "D7": "1 Week",
-          "D3": "1 Month"
+          "D3": "3 Days"
         }
       }
     },
