Add default option to dropdown menu for sort (#6359)

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3051,7 +3051,10 @@
           "FARCASTER": "Farcaster"
         },
         "sort": {
-          "RECOMMENDED": "Sort",
+          "RECOMMENDED": {
+            "label": "Sort",
+            "menuOption": "Default"
+          },
           "VOLUME": "Volume",
           "MARKET_CAP": "Market Cap",
           "TOP_GAINERS": "Top Gainers",
