goodbye hardhat => hello anvil

--- a/src/languages/ar_AR.json
+++ b/src/languages/ar_AR.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "مسح ذاكرة التخزين المؤقت لبيانات الصور",
       "clear_local_storage": "مسح التخزين المحلي",
       "clear_mmkv_storage": "مسح التخزين MMKV",
-      "connect_to_hardhat": "الاتصال بـ hardhat",
-      "disconnect_to_hardhat": "افصل عن Hardhat",
+      "connect_to_anvil": "الاتصال بـ anvil",
+      "disconnect_to_anvil": "افصل عن Anvil",
       "crash_app_render_error": "تعطيل التطبيق (خطأ في التصيير)",
       "enable_testnets": "تمكين شبكات الاختبار",
       "installing_update": "تثبيت التحديث",
