--- a/src/languages/es_419.json
+++ b/src/languages/es_419.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "Borrar Cache de Metadatos de Imagen",
       "clear_local_storage": "Borrar almacenamiento local",
       "clear_mmkv_storage": "Borrar almacenamiento de MMKV",
-      "connect_to_hardhat": "Conectar a Hardhat",
-      "disconnect_to_hardhat": "Desconectar de hardhat",
+      "connect_to_anvil": "Conectar a Anvil",
+      "disconnect_to_anvil": "Desconectar de anvil",
       "crash_app_render_error": "Crash de la aplicación (error de renderización)",
       "enable_testnets": "Habilitar Testnets",
       "installing_update": "Instalando actualización",
