--- a/src/languages/fr_FR.json
+++ b/src/languages/fr_FR.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "Effacer le cache des métadonnées d'image",
       "clear_local_storage": "Effacer le stockage local",
       "clear_mmkv_storage": "Effacer le stockage MMKV",
-      "connect_to_hardhat": "Se connecter à hardhat",
-      "disconnect_to_hardhat": "Déconnecter de hardhat",
+      "connect_to_anvil": "Se connecter à anvil",
+      "disconnect_to_anvil": "Déconnecter de anvil",
       "crash_app_render_error": "Crash app (render error) :)",
       "enable_testnets": "Activer Testnets",
       "installing_update": "Installation de la mise à jour",
