--- a/src/languages/hi_IN.json
+++ b/src/languages/hi_IN.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "छवि मेटाडाटा कैश साफ करें",
       "clear_local_storage": "लोकल स्टोरेज को साफ करें",
       "clear_mmkv_storage": "MMKV स्टोरेज को साफ करें",
-      "connect_to_hardhat": "Hardhat से कनेक्ट करें",
-      "disconnect_to_hardhat": "हार्डहैट से डिस्कनेक्ट करें",
+      "connect_to_anvil": "Anvil से कनेक्ट करें",
+      "disconnect_to_anvil": "हार्डहैट से डिस्कनेक्ट करें",
       "crash_app_render_error": "ऐप्र्प्लिकेशन क्रैश करें (रेंडर त्रुटि)",
       "enable_testnets": "टेस्टनेट्स सक्षम करें",
       "installing_update": "अद्यतन स्थापित कर रहा है",
