--- a/src/languages/id_ID.json
+++ b/src/languages/id_ID.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "Hapus Cache Metadata Gambar",
       "clear_local_storage": "Hapus penyimpanan lokal",
       "clear_mmkv_storage": "Hapus penyimpanan MMKV",
-      "connect_to_hardhat": "Hubungkan ke hardhat",
-      "disconnect_to_hardhat": "Putuskan hubungan dari hardhat",
+      "connect_to_anvil": "Hubungkan ke anvil",
+      "disconnect_to_anvil": "Putuskan hubungan dari anvil",
       "crash_app_render_error": "Aplikasi crash (kesalahan render)",
       "enable_testnets": "Aktifkan Testnets",
       "installing_update": "Menginstal pembaruan",
