--- a/src/languages/ja_JP.json
+++ b/src/languages/ja_JP.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "クリアイメージメタデータキャッシュ",
       "clear_local_storage": "ローカルストレージをクリア",
       "clear_mmkv_storage": "MMKVストレージをクリア",
-      "connect_to_hardhat": "Hardhatに接続する",
-      "disconnect_to_hardhat": "hardhatから切断する",
+      "connect_to_anvil": "Anvilに接続する",
+      "disconnect_to_anvil": "anvilから切断する",
       "crash_app_render_error": "アプリをクラッシュさせる（レンダーエラー）",
       "enable_testnets": "テストネットを有効にする",
       "installing_update": "アップデートをインストール中",
