--- a/src/languages/ko_KR.json
+++ b/src/languages/ko_KR.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "이미지 메타데이터 캐시 지우기",
       "clear_local_storage": "로컬 저장소 지우기",
       "clear_mmkv_storage": "MMKV 저장소 지우기",
-      "connect_to_hardhat": "하드햇에 연결",
-      "disconnect_to_hardhat": "hardhat 연결 해제",
+      "connect_to_anvil": "하드햇에 연결",
+      "disconnect_to_anvil": "anvil 연결 해제",
       "crash_app_render_error": "애플리케이션 종료 (렌더링 오류)",
       "enable_testnets": "테스트넷 활성화",
       "installing_update": "업데이트 설치 중",
