--- a/src/languages/pt_BR.json
+++ b/src/languages/pt_BR.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "Limpar Cache de Metadados da Imagem",
       "clear_local_storage": "Limpar Armazenamento Local",
       "clear_mmkv_storage": "Limpar Armazenamento MMKV",
-      "connect_to_hardhat": "Conectar ao Hardhat",
-      "disconnect_to_hardhat": "Desconectar do hardhat",
+      "connect_to_anvil": "Conectar ao Anvil",
+      "disconnect_to_anvil": "Desconectar do anvil",
       "crash_app_render_error": "Crash no app (erro de renderização)",
       "enable_testnets": "Ativar Testnets",
       "installing_update": "Instalando atualização",
