--- a/src/languages/ru_RU.json
+++ b/src/languages/ru_RU.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "Очистить кэш метаданных изображения",
       "clear_local_storage": "Очистить локальное хранилище",
       "clear_mmkv_storage": "Очистить хранилище MMKV",
-      "connect_to_hardhat": "Подключиться к hardhat",
-      "disconnect_to_hardhat": "Отключиться от hardhat",
+      "connect_to_anvil": "Подключиться к anvil",
+      "disconnect_to_anvil": "Отключиться от anvil",
       "crash_app_render_error": "Падение приложения (ошибка отображения)",
       "enable_testnets": "Включить тестовые сети",
       "installing_update": "Установка обновления",
