--- a/src/languages/th_TH.json
+++ b/src/languages/th_TH.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "ล้างแคชข้อมูลภาพ",
       "clear_local_storage": "ล้าง local storage",
       "clear_mmkv_storage": "ล้าง MMKV storage",
-      "connect_to_hardhat": "เชื่อมต่อกับ hardhat",
-      "disconnect_to_hardhat": "ตัดการเชื่อมต่อจาก Hardhat",
+      "connect_to_anvil": "เชื่อมต่อกับ anvil",
+      "disconnect_to_anvil": "ตัดการเชื่อมต่อจาก Anvil",
       "crash_app_render_error": "คว่ำ app (render error)",
       "enable_testnets": "เปิดใช้งาน Testnets",
       "installing_update": "กำลังติดตั้งการอัปเดต",
