--- a/src/languages/tr_TR.json
+++ b/src/languages/tr_TR.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "Resim Metaveri Önbelleğini Temizle",
       "clear_local_storage": "Yerel depolamayı temizle",
       "clear_mmkv_storage": "MMKV depolamasını temizle",
-      "connect_to_hardhat": "Hardhat'a bağlan",
-      "disconnect_to_hardhat": "Hardhat'tan bağlantıyı kes",
+      "connect_to_anvil": "Anvil'a bağlan",
+      "disconnect_to_anvil": "Anvil'tan bağlantıyı kes",
       "crash_app_render_error": "Uygulamayı çökert (render hatası)",
       "enable_testnets": "Testnetleri Etkinleştir",
       "installing_update": "Güncelleme Yükleniyor",
