--- a/src/languages/zh_CN.json
+++ b/src/languages/zh_CN.json
@@ -503,8 +503,8 @@
       "clear_image_metadata_cache": "清除图片内元数据缓存",
       "clear_local_storage": "清除本地存储",
       "clear_mmkv_storage": "清除MMKV存储",
-      "connect_to_hardhat": "连接到hardhat",
-      "disconnect_to_hardhat": "断开硬帽连接",
+      "connect_to_anvil": "连接到anvil",
+      "disconnect_to_anvil": "断开硬帽连接",
       "crash_app_render_error": "崩溃应用程序（渲染错误）",
       "enable_testnets": "启用Testnets",
       "installing_update": "正在安装更新",
