--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -523,8 +523,8 @@
       "clear_image_metadata_cache": "Clear Image Metadata Cache",
       "clear_local_storage": "Clear local storage",
       "clear_mmkv_storage": "Clear MMKV storage",
-      "connect_to_hardhat": "Connect to hardhat",
-      "disconnect_to_hardhat": "Disconnect from hardhat",
+      "connect_to_anvil": "Connect to anvil",
+      "disconnect_to_anvil": "Disconnect from anvil",
       "crash_app_render_error": "Crash app (render error)",
       "enable_testnets": "Enable Testnets",
       "installing_update": "Installing update",
