--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3076,8 +3076,9 @@
         "tap_the": "Tap the",
         "button_to_set_up": "button below to set up"
       },
-      "drag_here_to_unpin": "Drop Here to Unpin",
+      "drop_here_to_unpin": "Drop Here to Unpin",
       "edit": "Edit",
+      "network": "Network",
       "networks": "Networks",
       "drag_to_rearrange": "Drag to Rearrange",
       "show_less": "Show Less",
