separate out context menu button, add pin & hide functionality

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -700,7 +700,11 @@
         "menu": {
           "view_on": "View on %{blockExplorerName}",
           "share": "Share",
-          "copy_contract_address": "Copy Contract Address"
+          "copy_contract_address": "Copy Contract Address",
+          "pin": "Pin",
+          "unpin": "Unpin",
+          "hide": "Hide",
+          "unhide": "Unhide"
         }
       },
       "chart": {
