feat: expanded state v2 phase 1 (#6332)
* feature flags, sheet, context, collapsible section

* add route param + accent colors to context + sheet bg

* some refactoring + work on buy section

* animation work

* balance section

* fix up sheet config

* fix scrolling issue

* bridge section

* memo

* feature flags, sheet, context, collapsible section

* add route param + accent colors to context + sheet bg

* some refactoring + work on buy section

* animation work

* balance section

* fix up sheet config

* fix scrolling issue

* bridge section

* memo

* x icon

* add background color calc, owned asset logic to context

* add isSquare prop setting to sheet action button

* add sheet footer section

* change collapsable section layout anim

* market stats section with mock data

* fix balance section text overflow

* add networks to parsed serach asset converter

* reintigrate chart, buy section and bridge section work, sheet sections conditional logic

* chart header design updates

* update dropdown menu to support subtitles

* sheet footer context menu button work

* add number of lines prop to text shadow

* prevent chart label from causing layout shift

* comment out market stats card

* fix token details event types

* fix market stat info list formatting

* normalize asset types from navigation sources, update context to use provide different asset types

* simplify showChart logic

* add no chart data placeholder

* separate out context menu button, add pin & hide functionality

* update linear gradient patch to correctly display p3 color space

* expansion item accept animated boolean

* about section truncation + expansion

* market section no data available

* remove duplicate background color calc

* add telegram in about, fix row highlight border layout issue

* fix row animated highlight value, spacing, add 24h volume stat

* fix context menu vertical offset

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -678,7 +678,7 @@
       "asset": {
         "about_asset": "About %{assetName}",
         "balance": "Balance",
-        "get_asset": "Get %{assetSymbol}",
+        "get_asset": "Buy %{assetSymbol}",
         "market_cap": "Market cap",
         "read_more_button": "Read more",
         "available_networks": "Available on %{availableNetworks} networks",
@@ -690,13 +690,46 @@
         "social": {
           "facebook": "Facebook",
           "homepage": "Homepage",
+          "website": "Website",
           "reddit": "Reddit",
           "telegram": "Telegram",
-          "twitter": "Twitter"
+          "twitter": "Twitter",
+          "search_on_twitter": "Search on Twitter"
         },
         "uniswap_liquidity": "Uniswap liquidity",
         "value": "Value",
-        "volume_24_hours": "24h volume"
+        "volume_24_hours": "24h volume",
+        "menu": {
+          "view_on": "View on %{blockExplorerName}",
+          "share": "Share",
+          "copy_contract_address": "Copy Contract Address",
+          "pin": "Pin",
+          "unpin": "Unpin",
+          "hide": "Hide",
+          "unhide": "Unhide"
+        },
+        "no_data_available": "No data available"
+      },
+      "sections": {
+        "market_stats": {
+          "title": "Market Stats",
+          "circulating_supply": "Circulating Supply",
+          "max_supply": "Max Supply",
+          "fully_diluted_valuation": "Fully Diluted Valuation",
+          "market_cap": "Market Cap",
+          "created": "Created",
+          "volume_24_hours": "24h Volume",
+          "rank": "Rank"
+        },
+        "buy": {
+          "title": "Buy",
+          "pay_with": "Pay with",
+          "available_balance": "Available Balance"
+        },
+        "about": {
+          "title": "About",
+          "what_is": "What is %{assetName}?"
+        }
       },
       "chart": {
         "all_time": "All Time",
@@ -2990,6 +3023,10 @@
           "buy_native_token": "Buy %{symbol}"
         },
         "formatted_dates": {
+          "minute_ago": "minute ago",
+          "minutes_ago": "minutes ago",
+          "hour_ago": "hour ago",
+          "hours_ago": "hours ago",
           "today": "Today",
           "day_ago": "day ago",
           "days_ago": "days ago",
