Show price change header only after chart loads, "Today" → "Past Day"

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -753,7 +753,7 @@
         },
         "no_price_data": "No price data",
         "past_timespan": "Past %{formattedTimespan}",
-        "today": "Today",
+        "today": "Past Day",
         "token_pool": "%{tokenName} Pool"
       },
       "contact_profile": {
