Expanded state phase 1 cleanup (#6422)
* fix inconsistent row heights

* remove swap & send sheet action button icons

* improve website url formatting

* refactor buy section to always show, min buys for l2/mainnet

* add back the chart time label

* fix & cleanup percentage change label logic, remove prop spreading

* align asset metadata query config with chart & external asset config

* fix handling of negative number rounding in the toFixedWorklet safe math util

* delete no longer used useRatio hook

* use correct text color on accent color background according to accent contrast

* prevent market stats list section from jumping on layout by adding loading skeleton

* Expanded state polish

* make some sheet action buttons .tsx, fix lint errors

* Show price change header only after chart loads, "Today" → "Past Day"

* Improve light mode asset color contrast

* disable text shadows in test env

* remove commented out code

---------

Co-authored-by: Christian Baroni <7061887+christianbaroni@users.noreply.github.com>

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -678,7 +678,7 @@
       "asset": {
         "about_asset": "About %{assetName}",
         "balance": "Balance",
-        "get_asset": "Buy %{assetSymbol}",
+        "get_asset": "Get %{assetSymbol}",
         "market_cap": "Market cap",
         "read_more_button": "Read more",
         "available_networks": "Available on %{availableNetworks} networks",
@@ -724,7 +724,9 @@
         "buy": {
           "title": "Buy",
           "pay_with": "Pay with",
-          "available_balance": "Available Balance"
+          "available_balance": "Available Balance",
+          "open_swaps": "Open Swaps",
+          "low_balance": "Low balance"
         },
         "about": {
           "title": "About",
@@ -751,7 +753,7 @@
         },
         "no_price_data": "No price data",
         "past_timespan": "Past %{formattedTimespan}",
-        "today": "Today",
+        "today": "Past Day",
         "token_pool": "%{tokenName} Pool"
       },
       "contact_profile": {
