Network Switcher Implementations (#6466)
* adopt Kane's latest changes + make network switcher scrollable

* added easing gradient to the network switcher

* added prop to navigate back on network selection

* don't show gradient if list is less than max height

* replace swaps ChainSelection dropdown menu with NetworkSwitcher

* remove edit button on swaps network selectors

* don't persist pinned networks when we modify them to show as many networks as possible

* reordering of components and cleanup

* fix some leftover namings

* implement swaps settings network selector route

* implement claimables network selector

* add back button styling

* only save pinned networks when we have edit functionality

* fix some issues and update title on swaps settings panel to preferred network

* fix easing gradient opacity fade at bottom of scroll

---------

Co-authored-by: Kane Thomas <kmt8vn@virginia.edu>

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -483,7 +483,8 @@
         "a_network": "a network",
         "swap_failed": "Swap Failed",
         "receive": "Receive",
-        "on": "on"
+        "on": "on",
+        "reset": "Reset"
       }
     },
     "cloud": {
@@ -3140,7 +3141,7 @@
         }
       }
     },
-    "network_switcher": {
+    "network_selector": {
       "customize_networks_banner": {
         "title": "Customize Networks",
         "tap_the": "Tap the",
