--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -516,6 +516,7 @@
     },
     "developer_settings": {
       "alert": "Alert",
+      "analyze_env_variables": "Analyze ENV Variables",
       "analyze_react_query": "Analyze React Query",
       "applied": "APPLIED",
       "backups_deleted_successfully": "Backups Deleted Successfully",
