--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -345,6 +345,7 @@
       "receive": "Receive",
       "remove": "Remove",
       "save": "Save",
+      "skip": "Skip",
       "send": "Send",
       "send_another": "Send Another",
       "share": "Share",
@@ -3156,6 +3157,92 @@
       "more": "More",
       "show_more": "More Networks",
       "all_networks": "All Networks"
+    },
+    "token_launcher": {
+      "airdrop": {
+        "address_or_ens": "Address or ENS",
+        "suggested_users": "SUGGESTED USERS",
+        "airdrop_lists": "AIRDROP LISTS"
+      },
+      "allocation_breakdown": {
+        "my_share": "MY SHARE",
+        "airdropping": "AIRDROPPING",
+        "start_price": "START PRICE"
+      },
+      "network_field": {
+        "balance": "Balance: %{balance}",
+        "not_enough_funds": "Not enough funds to launch a token"
+      },
+      "review": {
+        "token_allocation": "Token allocation",
+        "your_share": "Your share",
+        "airdropping": "Airdropping",
+        "about": "About",
+        "total_cost": "Total cost",
+        "initial_price": "Initial price",
+        "market_cap": "Market cap",
+        "total_supply": "Total supply",
+        "network": "Network"
+      },
+      "creating": {
+        "deploying": "Deploying %{symbol}..."
+      },
+      "success": {
+        "title": "${symbol} is live!",
+        "congrats": "Congrats, you just launched %{name} into the world! Share it to spread the vibes"
+      },
+      "input_errors": {
+        "too_long": "Too long, friend.",
+        "invalid_input": "Invalid input"
+      },
+      "titles": {
+        "total_supply": "Total Supply",
+        "ticker": "Ticker",
+        "name": "Name",
+        "description": "Description",
+        "required_info": "REQUIRED INFO",
+        "about": "ABOUT",
+        "token_allocation": "Token allocation",
+        "mcap": "MCAP"
+      },
+      "placeholders": {
+        "ticker": "$NAME",
+        "enter_coin_name": "Enter coin name",
+        "describe_your_coin": "Describe your coin"
+      },
+      "buttons": {
+        "hold_to_create": "Hold to Create",
+        "creating": "Creating..."
+      },
+      "header": {
+        "new_coin": "New Coin",
+        "review": "Review",
+        "creating": "Creating"
+      },
+      "links": {
+        "x": {
+          "name": "X/Twitter",
+          "placeholder": "Username"
+        },
+        "telegram": {
+          "name": "Telegram",
+          "placeholder": "Channel"
+        },
+        "farcaster": {
+          "name": "Farcaster",
+          "placeholder": "Username"
+        },
+        "website": {
+          "name": "Website",
+          "placeholder": "https://example.com"
+        },
+        "other": {
+          "name": "Other",
+          "placeholder": "https://other.com"
+        },
+        "add_more": "Add More"
+      },
+      "discard_and_exit": "Discard & Exit"
     },
     "done": "Done",
     "copy": "Copy",
