--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3162,7 +3162,8 @@
       "airdrop": {
         "address_or_ens": "Address or ENS",
         "suggested_users": "SUGGESTED USERS",
-        "airdrop_lists": "AIRDROP LISTS"
+        "airdrop_lists": "AIRDROP LISTS",
+        "max_recipients_reached": "Max %{maxRecipientCount} recipients reached"
       },
       "image_upload_error": {
         "title": "Sorry, there was an error uploading your image.",
