airdrop suggestions query store, suggested users as flatlist instead of scrollview

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3214,6 +3214,7 @@
         "ticker": "Ticker",
         "name": "Name",
         "description": "Description",
+        "airdrop": "Airdrop",
         "required_info": "REQUIRED INFO",
         "about": "ABOUT",
         "token_allocation": "Token allocation",
