update token link url scheme, hook share button up to store state + actually share

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3227,7 +3227,8 @@
       },
       "buttons": {
         "hold_to_create": "Hold to Create",
-        "creating": "Creating..."
+        "creating": "Creating...",
+        "share_link": "Share Link"
       },
       "header": {
         "new_coin": "New Coin",
