adds rainbow category to trending tokens

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3121,6 +3121,7 @@
       "filters": {
         "categories": {
           "TRENDING": "Trending",
+          "RAINBOW": "Rainbow",
           "NEW": "New",
           "FARCASTER": "Farcaster"
         },
