--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3199,7 +3199,7 @@
       },
       "success": {
         "title": "%{symbol} is live!",
-        "congrats": "Congrats, you just launched %{name} into the world! Share it to spread the vibes"
+        "congrats": "Congrats, you just launched %{name} into the world! Share it to spread the vibes."
       },
       "input_errors": {
         "too_long": "Too long, friend.",
@@ -3215,6 +3215,7 @@
         "total_supply": "Total Supply",
         "ticker": "Ticker",
         "name": "Name",
+        "network": "Network",
         "description": "Description",
         "airdrop": "Airdrop",
         "required_info": "REQUIRED INFO",
@@ -3252,7 +3253,7 @@
         },
         "website": {
           "name": "Website",
-          "placeholder": "https://example.com"
+          "placeholder": "https://homepage.com"
         },
         "other": {
           "name": "Other",
