@kane/ftl cleanup (#6494)
* prevent navigation to token launcher from watched wallet

* show token image for home page link, fix review step link overflow, format link for display, add warpcast svg

* fix images with transparency not having blur applied

* new airdrop cohort design, prevent duplicate adding same cohort, replace design system red uses with custom error red

* add rainbow share to tokenomics calculations, various localization fixes

* fix hold to create bad isProcessing logic allowing for double pressing

* remove border effects blur animation

* auto pin created token after creation

* max total supply 1 trillion, don't calc tokenomics past that

* allow hardware wallet signing

* revert description max height, match modal config to other modals

* debounce link input state updates

* adapt symbol font size on reveiw & success step to character count. Cleanup review step code, unmount sections that would re-render from input step inputs

* fix prebuy bug where invalid amount after iputting error amount then clearing input

* properly handle personalized airdrop cohorts

* normalize analytics params, add abandoned analytic

* add error analytics, add is moderated analytic param, cleanup analytics types

* remove errant console.log

* Various Android fixes, url formatting crash fix

* fix token upload return type mismatch

* delete commented out code

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3217,7 +3217,7 @@
       },
       "success": {
         "title": "%{symbol} is live!",
-        "congrats": "Congrats, you just launched %{name} into the world! Share it to spread the vibes"
+        "congrats": "Congrats, you just launched %{name} into the world! Share it to spread the vibes."
       },
       "input_errors": {
         "too_long": "Too long, friend.",
@@ -3233,6 +3233,7 @@
         "total_supply": "Total Supply",
         "ticker": "Ticker",
         "name": "Name",
+        "network": "Network",
         "description": "Description",
         "airdrop": "Airdrop",
         "required_info": "REQUIRED INFO",
@@ -3274,7 +3275,7 @@
         },
         "website": {
           "name": "Website",
-          "placeholder": "https://example.com"
+          "placeholder": "https://homepage.com"
         },
         "other": {
           "name": "Other",
