Add `RainbowClaimable` type, hook up `refreshControl` on iOS, adjust airdrops fetch times

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3185,7 +3185,8 @@
         "hold_to_claim": "Hold to Claim",
         "hold_to_retry": "Hold to Retry",
         "title": "Claim $%{symbol}",
-        "to_claim_on": "to claim on %{network}"
+        "to_claim_on": "to claim on %{network}",
+        "you": "You"
       }
     },
     "done": "Done",
