change rainbow allocation copy

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3191,8 +3191,8 @@
             "description": "Ensures smooth trading and liquidity"
           },
           "rainbow_share": {
-            "title": "Rainbow Share",
-            "description": "Supports Rainbow's platform"
+            "title": "Over the Rainbow",
+            "description": "Future Community Distributions"
           }
         }
       },
