Add expanded state claims, TL cleanup, bump `react-native-keyboard-controller`

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -717,7 +717,7 @@
           "hide": "Hide",
           "unhide": "Unhide"
         },
-        "no_data_available": "No data available"
+        "no_data_available": "No Data Available"
       },
       "sections": {
         "market_stats": {
@@ -732,10 +732,15 @@
         },
         "buy": {
           "title": "Buy",
-          "pay_with": "Pay with",
+          "pay_with": "Buy with",
           "available_balance": "Available Balance",
           "open_swaps": "Open Swaps",
-          "low_balance": "Low balance"
+          "low_balance": "Low Balance"
+        },
+        "claim": {
+          "claim_button": "Claim Airdrop",
+          "created_by": "Created by %{creator}",
+          "title": "Claim"
         },
         "about": {
           "title": "About",
@@ -760,7 +765,8 @@
             "month_11": "Dec"
           }
         },
-        "no_price_data": "No price data",
+        "no_chart_data": "No Chart Data",
+        "no_price_data": "No Price Data",
         "past_timespan": "Past %{formattedTimespan}",
         "today": "Past Day",
         "token_pool": "%{tokenName} Pool"
@@ -3201,7 +3207,8 @@
         "not_enough_funds": "Not enough funds to launch a token"
       },
       "prebuy": {
-        "balance_after_gas_fee": "Balance After Gas Fee: %{balance}"
+        "balance_after_gas_fee": "Available Balance: %{balance}",
+        "title": "Pre-buy more tokens"
       },
       "review": {
         "token_allocation": "Token allocation",
@@ -3232,12 +3239,12 @@
         "amount_is_greater_than_max_prebuy_amount": "Exceeds max pre-buy amount of %{maxPrebuyAmount} %{chainNativeAssetSymbol}"
       },
       "titles": {
-        "total_supply": "Total Supply",
+        "total_supply": "Total supply",
         "ticker": "Ticker",
         "name": "Name",
         "network": "Network",
         "description": "Description",
-        "airdrop": "Airdrop",
+        "airdrop": "Airdrop to friends",
         "required_info": "REQUIRED INFO",
         "about": "ABOUT",
         "token_allocation": "TOKEN ALLOCATION",
