fix: cacheTime to RSTs and activity tweaks

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2269,6 +2269,11 @@
           "confirmed": "Interacted",
           "failed": "Interaction Failed"
         },
+        "token_launch": {
+          "pending": "Launching Rainbow Super Token",
+          "confirmed": "Launched Rainbow Super Token",
+          "failed": "Launch Failed"
+        },
         "swap": {
           "pending": "Swapping",
           "confirmed": "Swapped",
