new tx type: launch

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2269,7 +2269,7 @@
           "confirmed": "Interacted",
           "failed": "Interaction Failed"
         },
-        "token_launch": {
+        "launch": {
           "pending": "Launching Rainbow Super Token",
           "confirmed": "Launched Rainbow Super Token",
           "failed": "Launch Failed"
